--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.95.2"
 uvicorn = {extras = ["standard"], version = "^0.22.0"}
 pydantic = "^1.10.8"
 requests = "^2.31.0"
+python-dateutil = "^2.8.2"
 
 
 [tool.poetry.group.dev.dependencies]
